# red-scale-pilot-assessment

./: .gitignore  README.md  docker-compose.yml  ssl-init.sh
api/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  test_assessment.py  test_feature.py  test_parser.py  test_rules.py
api/app/: agent.py  config.py  limiter.py  main.py
api/app/core/: features.py  ml.py  parser.py  report.py  rules.py
api/app/models/: assessment.py  flight_features.py  rule_violation.py  schemas.py
api/app/routers/: chat.py  health.py
api/app/services/: assessment_service.py
api/app/tools/: aviation_knowledge.py  sql_query.py
api/data/: fdr_sample.csv
api/nginx/conf.d/: app.conf  app.conf.bootstrap
frontend/: .gitignore
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  Header.tsx  TypingIndicator.tsx  WelcomeScreen.tsx
frontend/src/hooks/: useChat.ts
nginx/conf.d/: app.conf  app.conf.bootstrap  app.conf.ssl
scripts/: .env.example  .gitignore  build_db.py  requirements.txt
scripts/db/: indexes.sql  schema.sql  users.sql
scripts/ingest/: chunker.py  embedder.py  loader.py  run_ingest.py  scraper.py  sources.json
