[project]
name = "f1-chatbot-api"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "openai-agents==0.0.11",
    "asyncpg==0.30.0",
    "sqlalchemy[asyncio]==2.0.36",
    "pgvector==0.3.6",
    "fastf1==3.5.3",
    "sqlglot==26.0.0",
    "python-jose[cryptography]==3.3.0",
    "slowapi==0.1.9",
    "redis[hiredis]==5.2.1",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
]

[tool.uv]
dev-dependencies = []
